--- a/Web.Config
+++ b/Web.Config
@@ -11,6 +11,10 @@
 	<appSettings/>
 	<connectionStrings/>
 	<system.web>
+	
+	<customErrors mode="Off"/>
+	
+	
 		<!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
